--- a/src/app/composants/header/header.component.html
+++ b/src/app/composants/header/header.component.html
@@ -29,7 +29,7 @@
           <li>
             <hr class="dropdown-divider">
           </li>
-          <li> <a class="dropdown-item d-flex align-items-center" href=""> <i class="bi bi-box-arrow-right"></i> <span>Déconnexion</span> </a></li>
+          <li> <a class="dropdown-item d-flex align-items-center" href="" (click)="logout()"> <i class="bi bi-box-arrow-right"></i> <span>Déconnexion</span> </a></li>
         </ul>
       </li>
     </ul>
