--- a/src/app/pages/facture/facture.component.html
+++ b/src/app/pages/facture/facture.component.html
@@ -1,28 +1,29 @@
-<button type="button" routerLink="/ajouterProduit" class="btn btn-primary">Ajouter</button>
+<button type="button" routerLink="/ajouterFacture" class="btn btn-primary">Ajouter</button>
+<div class="card p-3">
+  <h2>Liste des factures</h2>
+  <app-loader *ngIf="isLoading"></app-loader>
+  <table class="table text-center">
+    <thead>
+    <tr>
+      <th>Référence</th>
+      <th>Date de facture</th>
+      <th>Montant TTC</th>
+      <th>Client</th>
+      <th>Action</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let f of listeFacture">
+      <td scope="row">{{f.reference}}</td>
+      <td></td>
+      <td>{{f.montantTTC | number:'1.3-3' }}</td>
+      <td>{{f.client!.nom}}  {{f.client!.prenom}}</td>
+      <td><button class="btn btn-primary" [routerLink]="['/detailsfacture', f.id]"><i class="bi bi-eye"></i></button></td>
+    </tr>
 
-<table class="table">
-  <thead>
-  <tr>
-    <th scope="col">Code</th>
-    <th scope="col">Nom</th>
-    <th scope="col">Description</th>
-    <th scope="col">Remise</th>
-    <th scope="col">Prix</th>
-    <th scope="col">Action</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let p of listePrduits">
-    <td scope="row">{{p.code}}</td>
-    <td>{{p.nom}}</td>
-    <td>{{p.description}}</td>
-    <td *ngIf="p.etatRemise ? true : false">Oui</td>
-    <td *ngIf="p.etatRemise ? false : true">Non</td>
-    <td>{{p.prix}}</td>
-    <td><button class="btn btn-warning" [routerLink]="['/produit', p.id]">Modifier</button></td>
-  </tr>
-  </tbody>
-</table>
+    </tbody>
+  </table>
+</div>
 
 <nav *ngIf="page" aria-label="Page navigation">
   <ul class="pagination">
@@ -50,8 +51,3 @@
     </li>
   </ul>
 </nav>
-
-
-
-
-
