--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -2,7 +2,7 @@
   <app-menu></app-menu>
   <div class="main">
     <app-header></app-header>
-    <main id="main" class="main">
+    <main id="main">
         <router-outlet></router-outlet>
     </main>
   </div>
