--- a/src/app/pages/facture/facture.component.html
+++ b/src/app/pages/facture/facture.component.html
@@ -9,15 +9,18 @@
       <th>Date de facture</th>
       <th>Montant TTC</th>
       <th>Client</th>
+      <th>Payement status</th>
       <th>Action</th>
     </tr>
     </thead>
     <tbody>
     <tr *ngFor="let f of listeFacture">
       <td scope="row">{{f.reference}}</td>
-      <td></td>
-      <td>{{f.montantTTC | number:'1.3-3' }}</td>
+      <td>{{f.dateFacture}}</td>
+      <td>{{f.montantTTC | number:'1.3-3' }} TND</td>
       <td>{{f.client!.nom}}  {{f.client!.prenom}}</td>
+      <td *ngIf="f.paymentStatus"><span class="badge bg-success">Payé</span></td>
+      <td *ngIf="!f.paymentStatus"><span class="badge bg-danger">Non payé</span></td>
       <td><button class="btn btn-primary" [routerLink]="['/detailsfacture', f.id]"><i class="bi bi-eye"></i></button></td>
     </tr>
 
