--- a/src/app/pages/facture/details-facture/details-facture.component.html
+++ b/src/app/pages/facture/details-facture/details-facture.component.html
@@ -163,4 +163,6 @@
 <div class="col-md-4 text-right">
   <button class="btn btn-success btn-block" (click)="openPDF()">Download PDF</button>
 </div>
-
+<div class="col-md-4 text-right mt-2">
+  <button class="btn btn-success btn-block" (click)="openPDF2()">Download PDF 2</button>
+</div>
