--- a/src/app/pages/facture/ajouter-facture/ajouter-facture.component.html
+++ b/src/app/pages/facture/ajouter-facture/ajouter-facture.component.html
@@ -10,12 +10,13 @@
       </div>
       <div class="card-body">
         <div class="mb-3">
+          <label>Sélectionnez une client</label>
           <select
             class="form-control"
             id="client"
             name="client"
             [(ngModel)]="client">
-            <option disabled selected value="undefined">Sélectionnez un client</option>
+            <option disabled selected value="undefined">Sélectionnez une client</option>
             <option *ngFor="let c of listeClient" [ngValue]="c">{{c.nom}} {{c.prenom}}</option>
           </select>
         </div>
@@ -105,7 +106,7 @@
 
     <!-- Client information column -->
     <div class="col-md-12">
-      <div class="card mb-5">
+      <div class="card mb-5 d-none d-md-block">
         <div class="card-header text-center">
           La liste des produits facturés
         </div>
@@ -124,13 +125,36 @@
               <tr *ngFor="let p of listeProduitFacture">
                 <td scope="row">{{p.produit!.code}}</td>
                 <td>{{p.quantite}}</td>
-                <td>{{p.prixUnitaire | number:'1.3-3'}}</td>
+                <td>{{p.prixUnitaire | number:'1.3-3'}} TND</td>
                 <td *ngIf="p.produit!.etatRemise">{{client.remise}} %</td>
                 <td *ngIf="!p.produit!.etatRemise">0 %</td>
-                <td>{{p.prixTotal | number:'1.3-3'}}</td>
+                <td>{{p.prixTotal | number:'1.3-3'}} TND</td>
               </tr>
               </tbody>
             </table>
+        </div>
+      </div>
+      <div class="d-block d-md-none card p-2">
+        <h2 class="card-title">La liste des produits facturés</h2>
+        <div *ngFor="let p of listeProduitFacture" class="row border-top border-secondary border-1 rounded pt-2">
+          <div class="col-6">
+            <p><b>Code : </b>{{p.produit!.code}}</p>
+          </div>
+          <div class="col-6">
+            <p><b>Quantite : </b>{{p.quantite}}</p>
+          </div>
+          <div class="col-6">
+            <p><b>Prix Unitaire : </b>{{p.prixUnitaire | number:'1.3-3'}} TND</p>
+          </div>
+          <div class="col-6">
+            <p>
+              <b>Remise : </b><span *ngIf="p.produit!.etatRemise">{{client.remise}} %</span>
+              <span *ngIf="!p.produit!.etatRemise">0 %</span>
+            </p>
+          </div>
+          <div class="col-6">
+            <p> <b>Total HT :</b><br> {{p.prixTotal | number:'1.3-3'}} TND</p>
+          </div>
         </div>
       </div>
       <div class="card">
