--- a/src/app/pages/facture/facture.component.html
+++ b/src/app/pages/facture/facture.component.html
@@ -1,5 +1,5 @@
-<button type="button" routerLink="/ajouterFacture" class="btn btn-primary">Ajouter</button>
-<div class="card p-3">
+<div class="card p-2 d-none d-md-block">
+  <button type="button" routerLink="/ajouterFacture" class="btn btn-primary">Ajouter</button>
   <h2>Liste des factures</h2>
   <app-loader *ngIf="isLoading"></app-loader>
   <table class="table text-center">
@@ -10,7 +10,8 @@
       <th>Montant TTC</th>
       <th>Client</th>
       <th>Payement status</th>
-      <th>Action</th>
+      <th>Details</th>
+      <th>Payé</th>
     </tr>
     </thead>
     <tbody>
@@ -21,7 +22,15 @@
       <td>{{f.client!.nom}}  {{f.client!.prenom}}</td>
       <td *ngIf="f.paymentStatus"><span class="badge bg-success">Payé</span></td>
       <td *ngIf="!f.paymentStatus"><span class="badge bg-danger">Non payé</span></td>
-      <td><button class="btn btn-primary" [routerLink]="['/detailsfacture', f.id]"><i class="bi bi-eye"></i></button></td>
+      <td>
+        <button class="btn btn-primary" [routerLink]="['/detailsfacture', f.id]"><i class="bi bi-eye"></i></button>
+      </td>
+      <td>
+        <button *ngIf="!f.paymentStatus" type="button" class="btn btn-primary" (click)="setId(f.id)" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+          Payé
+        </button>
+
+      </td>
     </tr>
 
     </tbody>
@@ -54,3 +63,85 @@
     </li>
   </ul>
 </nav>
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Confirmer le changement de statut de paiement</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Êtes-vous sûr de vouloir changer le statut de paiement en "payé" ?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" (click)="updatePaymentStatus()" data-bs-dismiss="modal">Confirmer</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="d-block d-md-none">
+  <!-- Contenu à afficher sur petit écran -->
+  <div class="card p-2">
+    <div class="container">
+      <button type="button" routerLink="/ajouterFacture" class="btn btn-primary">Ajouter</button>
+      <div class="row">
+        <div class="col">
+          <h1 class="text-center text-primary p-2 title-underline"><u>Liste des factures</u></h1>
+        </div>
+      </div>
+    </div>
+    <tbody>
+    <div class="row border-bottom border-primary pt-2" *ngFor="let f of listeFacture">
+      <div class="col">
+        <div><strong>Référence:</strong></div>
+        <div>{{f.reference}}</div>
+        <div><strong>Date de facture:</strong></div>
+        <div>{{f.dateFacture}}</div>
+        <div><strong>Montant TTC:</strong></div>
+        <div>{{f.montantTTC | number:'1.3-3' }} TND</div>
+      </div>
+      <div class="col">
+        <div><strong>Client:</strong></div>
+        <div>{{f.client!.nom}}  {{f.client!.prenom}}</div>
+        <div><span *ngIf="f.paymentStatus"><span class="badge bg-success">Payé</span></span>
+          <span *ngIf="!f.paymentStatus"><span class="badge bg-danger">Non payé</span></span>
+        </div>
+        <button class="btn btn-primary mt-3" [routerLink]="['/detailsfacture', f.id]"><i class="bi bi-eye"></i></button>
+        <button *ngIf="!f.paymentStatus" type="button" class="btn btn-success mt-3 ms-2" (click)="setId(f.id)" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+          Payé
+        </button>
+      </div>
+    </div>
+    </tbody>
+  </div>
+  <nav *ngIf="page" aria-label="Page navigation">
+    <ul class="pagination">
+      <li class="page-item" [class.disabled]="currentPage === 0">
+        <a class="page-link" href="javascript:void(0);" (click)="onPageChange({pageIndex: currentPage - 1, pageSize: pageSize})" aria-label="Previous">
+          <span aria-hidden="true">&laquo;</span>
+          <span class="sr-only">Previous</span>
+        </a>
+      </li>
+
+      <ng-container *ngFor="let i of pageNumbers()">
+        <li class="page-item" [class.active]="currentPage === i" *ngIf="i < 5 || i >= page.totalPages! - 2 || Math.abs(i - currentPage) < 2">
+          <a class="page-link" href="javascript:void(0);" (click)="onPageChange({pageIndex: i, pageSize: pageSize})">{{i + 1}}</a>
+        </li>
+        <li class="page-item disabled" *ngIf="i === currentPage+3 && currentPage + 3 < page.totalPages!">
+          <a class="page-link">...</a>
+        </li>
+      </ng-container>
+
+      <li class="page-item" [class.disabled]="currentPage === (page.totalPages ?? 0) - 1">
+        <a class="page-link" href="javascript:void(0);" (click)="onPageChange({pageIndex: currentPage + 1, pageSize: pageSize})" aria-label="Next">
+          <span aria-hidden="true">&raquo;</span>
+          <span class="sr-only">Next</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
