--- a/src/app/pages/facture/facture.component.html
+++ b/src/app/pages/facture/facture.component.html
@@ -1,7 +1,74 @@
 <div class="card p-2 d-none d-md-block">
   <button type="button" routerLink="/ajouterFacture" class="btn btn-primary">Ajouter</button>
+  <button class="btn btn-danger ms-2" (click)="toggleDivFiltre()">Filtre</button>
+  <div *ngIf="showDivFiltre" class="card mt-3">
+    <form>
+      <div class="row">
+        <div class="col">
+          <div class="form-group">
+            <label for="Reference">Reference</label>
+            <input type="text" class="form-control" id="Reference" name="Reference" [(ngModel)]="refFacture">
+          </div>
+        </div>
+        <div class="col">
+          <div class="form-group">
+            <label>MontatnTTC Minimum</label>
+            <input type="text" class="form-control" name="minMontatnTTC" [(ngModel)]="minMontatnTTC">
+          </div>
+        </div>
+        <div class="col">
+          <div class="form-group">
+            <label>MontatnTTC Maximum</label>
+            <input type="text" class="form-control" name="maxMontatnTTC" [(ngModel)]="maxMontatnTTC">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="form-group mt-2">
+            <label for="status" class="col-form-label">État de remise</label>
+            <div>
+              <select class="form-control" id="status" name="status" [(ngModel)]="paymentStatus">
+                <option selected value="null">Choisir un status de payement</option>
+                <option value="true">Payé</option>
+                <option value="false">Non Payé</option>
+              </select>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group mt-2">
+            <label for="client" class="col-form-label">client</label>
+            <div>
+              <select class="form-control" id="client" name="client" [(ngModel)]="client">
+                <option [selected]="client === null">Sélectionnez une client</option>
+                <option *ngFor="let c of listClient" [ngValue]="c">{{c.nom}} {{c.prenom}}</option>
+              </select>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="form-group">
+            <label for="selectedDateDebut">Select a date</label>
+            <input class="form-control" type="date" id="selectedDateDebut" [(ngModel)]="dateDebut" name="selectedDate">
+          </div>
+
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <label for="selectedDateDinf">Select a date</label>
+            <input class="form-control" type="date" id="selectedDateDinf" [(ngModel)]="dateFin" name="selectedDate">
+          </div>
+
+        </div>
+      </div>
+      <button type="submit" class="btn btn-success mt-2" (click)="findAllPaginated()">Rechercher</button>
+    </form>
+  </div>
   <h2>Liste des factures</h2>
-  <app-loader *ngIf="isLoading"></app-loader>
+  <app-loader2 *ngIf="isLoading"></app-loader2>
   <table class="table text-center">
     <thead>
     <tr>
@@ -88,6 +155,70 @@
   <div class="card p-2">
     <div class="container">
       <button type="button" routerLink="/ajouterFacture" class="btn btn-primary">Ajouter</button>
+      <button class="btn btn-danger ms-2" (click)="toggleDivFiltre()">Filtre</button>
+      <div *ngIf="showDivFiltre" class="card mt-3">
+        <form>
+            <div class="col">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Reference" name="Reference" [(ngModel)]="refFacture">
+              </div>
+            </div>
+            <div class="row mt-2">
+            <div class="col">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="MontatnTTC Minimum" name="minMontatnTTC" [(ngModel)]="minMontatnTTC">
+              </div>
+            </div>
+            <div class="col">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="MontatnTTC Maximum"  name="maxMontatnTTC" [(ngModel)]="maxMontatnTTC">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="form-group mt-2">
+                <label for="status" class="col-form-label">État de remise</label>
+                <div>
+                  <select class="form-control" id="status" name="status" [(ngModel)]="paymentStatus">
+                    <option selected value="null">Choisir un status de payement</option>
+                    <option value="true">Payé</option>
+                    <option value="false">Non Payé</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group mt-2">
+                <label for="client" class="col-form-label">client</label>
+                <div>
+                  <select class="form-control" id="client" name="client" [(ngModel)]="client">
+                    <option [selected]="client === null">Sélectionnez une client</option>
+                    <option *ngFor="let c of listClient" [ngValue]="c">{{c.nom}} {{c.prenom}}</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row mt-2">
+            <div class="col">
+              <div class="form-group">
+                <label for="selectedDateDebut">Date facture De</label>
+                <input class="form-control" type="date"  id="selectedDateDebut" [(ngModel)]="dateDebut" name="selectedDate">
+              </div>
+
+            </div>
+            <div class="col">
+              <div class="form-group">
+                <label for="selectedDateDinf">Date facture à</label>
+                <input class="form-control" type="date" id="selectedDateDinf" [(ngModel)]="dateFin" name="selectedDate">
+              </div>
+
+            </div>
+          </div>
+          <button type="submit" class="btn btn-success mt-2" (click)="findAllPaginated()">Rechercher</button>
+        </form>
+      </div>
       <div class="row">
         <div class="col">
           <h1 class="text-center text-primary p-2 title-underline"><u>Liste des factures</u></h1>
