--- a/src/app/pages/facture/facture.component.html
+++ b/src/app/pages/facture/facture.component.html
@@ -26,7 +26,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="form-group mt-2">
-            <label for="status" class="col-form-label">État de remise</label>
+            <label for="status" class="col-form-label">Statut de payement</label>
             <div>
               <select class="form-control" id="status" name="status" [(ngModel)]="paymentStatus">
                 <option selected value="null">Choisir un status de payement</option>
