--- a/src/app/pages/produit/produit-modifier/produit-modifier.component.html
+++ b/src/app/pages/produit/produit-modifier/produit-modifier.component.html
@@ -40,7 +40,7 @@
     <select
       class="form-control"
       id="productCategory"
-      name="nom"
+      name="nomCat"
       [(ngModel)]="categorie.id"
     >
       <option  value="undefined">Sélectionnez une catégorie</option>
