--- a/src/app/pages/facture/ajouter-facture/ajouter-facture.component.html
+++ b/src/app/pages/facture/ajouter-facture/ajouter-facture.component.html
@@ -17,7 +17,7 @@
             name="client"
             [(ngModel)]="client">
             <option disabled selected value="undefined">Sélectionnez une client</option>
-            <option *ngFor="let c of listeClient" [ngValue]="c">{{c.nom}} {{c.prenom}}</option>
+            <option *ngFor="let c of listeClient" [ngValue]="c">{{c.nomCommercial}}</option>
           </select>
         </div>
         <span *ngIf="errorClient == true" class="text-danger" m-2>Veuillez sélectionner un client avant de continuer. </span>
@@ -62,7 +62,7 @@
                 <p class="cursor-pointer"
                    *ngFor="let p of listProduitFiltrer"
                    (click)="selectPrdotui(p)"
-                >{{p.code}} {{p.nom}}</p>
+                >{{p.code}}</p>
               </div>
             </div>
             <span class="text-danger" *ngIf="errorProduit == true">Veuillez choisir un produit</span>
@@ -93,7 +93,9 @@
               >
             </div>
             <div class="col mb-2">
-              Prix Totale : {{ quantite !== 0 ? (searchProduit.prix! * quantite)-((searchProduit.prix! * quantite)*(client.remise!/100)) : (searchProduit.prix! * 1)-((searchProduit.prix! * quantite)*(client.remise!/100)) | number:'1.3-3' }}
+              <span *ngIf="searchProduit.etatRemise == true" >Prix Totale : {{ quantite !== 0 ? ((searchProduit.prix! * quantite)-((searchProduit.prix! * quantite)*(client.remise!/100)) | number:'1.3-3'): (searchProduit.prix! * 1)-((searchProduit.prix! * quantite)*(client.remise!/100)) | number:'1.3-3' }}</span>
+              <span *ngIf="searchProduit.etatRemise == false" >Prix Totale : {{ (quantite !== 0 ? searchProduit.prix! * quantite:0) | number:'1.3-3' }}</span>
+
             </div>
             <div class="col mb-2">
               <button class="btn btn-success" (click)="ajouterProduitFacture()"><i class="bi bi-plus-circle-fill"></i></button>
@@ -119,6 +121,7 @@
                 <th scope="col">Prix Unitaire</th>
                 <th scope="col">Remise</th>
                 <th scope="col">Prix Total</th>
+                <th scope="col">Action</th>
               </tr>
               </thead>
               <tbody>
@@ -129,6 +132,7 @@
                 <td *ngIf="p.produit!.etatRemise">{{client.remise}} %</td>
                 <td *ngIf="!p.produit!.etatRemise">0 %</td>
                 <td>{{p.prixTotal | number:'1.3-3'}} TND</td>
+                <td> <button class="btn btn-danger" (click)="supprimerProdui(p)">-</button></td>
               </tr>
               </tbody>
             </table>
@@ -155,6 +159,9 @@
           <div class="col-6">
             <p> <b>Total HT :</b><br> {{p.prixTotal | number:'1.3-3'}} TND</p>
           </div>
+          <div class="col-6">
+            <p> <button class="btn btn-danger" (click)="supprimerProdui(p)">-</button></p>
+          </div>
         </div>
       </div>
       <div class="card">
@@ -167,8 +174,7 @@
               <p>Total brut HT: {{totalHT | number:'1.3-3'}}</p>
               <p>TVA 19% : {{totalHT*(19/100) | number:'1.3-3'}}
               <p>Droit de timbre : 1.000
-              <p>Total TTC : {{totalTTC | number:'1.3-3'}}
-              </p>
+              <p>Total TTC : {{totalTTC+timbre | number:'1.3-3'}}</p>
             </div>
 
             <div>
