changement calcul facture

--- a/src/app/pages/facture/ajouter-facture/ajouter-facture.component.html
+++ b/src/app/pages/facture/ajouter-facture/ajouter-facture.component.html
@@ -77,23 +77,18 @@
               <input type="text" class="form-control"
                      placeholder="Prix Unitaire"
                      [(ngModel)]="prixUtitaire"
-                     disabled
+
               >
             </div>
             <div class="col mb-2">
-              <input *ngIf="searchProduit.etatRemise" type="text" class="form-control"
+              <input  type="text" class="form-control"
                      placeholder="Remise"
-                     [(ngModel)]="client.remise"
-                     disabled
-              >
-              <input *ngIf="!searchProduit.etatRemise" type="text" class="form-control"
-                     placeholder="Remise"
-                     value="0"
-                     disabled
+                     [(ngModel)]="remise"
+
               >
             </div>
             <div class="col mb-2">
-              <span *ngIf="searchProduit.etatRemise == true" >Prix Totale : {{ quantite !== 0 ? ((searchProduit.prix! * quantite)-((searchProduit.prix! * quantite)*(client.remise!/100)) | number:'1.3-3'): (searchProduit.prix! * 1)-((searchProduit.prix! * quantite)*(client.remise!/100)) | number:'1.3-3' }}</span>
+              <span *ngIf="searchProduit.etatRemise == true" >Prix Totale : {{ quantite !== 0 ? ((searchProduit.prix! * quantite)-((searchProduit.prix! * quantite)*(remise!/100)) | number:'1.3-3'): (searchProduit.prix! * 1)-((searchProduit.prix! * quantite)*(client.remise!/100)) | number:'1.3-3' }}</span>
               <span *ngIf="searchProduit.etatRemise == false" >Prix Totale : {{ (quantite !== 0 ? searchProduit.prix! * quantite:0) | number:'1.3-3' }}</span>
 
             </div>
@@ -129,8 +124,7 @@
                 <td scope="row">{{p.produit!.code}}</td>
                 <td>{{p.quantite}}</td>
                 <td>{{p.prixUnitaire | number:'1.3-3'}} TND</td>
-                <td *ngIf="p.produit!.etatRemise">{{client.remise}} %</td>
-                <td *ngIf="!p.produit!.etatRemise">0 %</td>
+                <td>{{p.remise}} %</td>
                 <td>{{p.prixTotal | number:'1.3-3'}} TND</td>
                 <td> <button class="btn btn-danger" (click)="supprimerProdui(p)">-</button></td>
               </tr>
