--- a/src/app/pages/facture/facture.component.html
+++ b/src/app/pages/facture/facture.component.html
@@ -74,7 +74,7 @@
   <table class="table text-center">
     <thead>
     <tr>
-      <th>Select</th>
+      <th><input class="form-check-input" type="checkbox" (click)="findAllIds()" [checked]="ids.length==page.totalElements"></th>
       <th>Référence</th>
       <th>Date de facture</th>
       <th>Montant TTC</th>
@@ -161,7 +161,6 @@
       <button type="button" routerLink="/ajouterFacture" class="btn btn-primary">Ajouter</button>
       <button class="btn btn-danger ms-2" (click)="toggleDivFiltre()">Filtre</button>
       <button class="btn btn-success ms-2" (click)="pdf()"><i class="bi bi-file-earmark-pdf"></i>PDF ({{ids.length}}) </button>
-
       <div *ngIf="showDivFiltre" class="card mt-3">
         <form>
             <div class="col">
@@ -228,6 +227,7 @@
       <div class="row">
         <div class="col">
           <h1 class="text-center text-primary p-2 title-underline"><u>Liste des factures</u></h1>
+          <b>Sélectionner tout : <input class="form-check-input" type="checkbox" (click)="findAllIds()" [checked]="ids.length==page.totalElements"></b>
         </div>
       </div>
     </div>
