--- a/src/app/pages/statistique/statistique.component.html
+++ b/src/app/pages/statistique/statistique.component.html
@@ -7,6 +7,7 @@
         <div class="d-flex align-items-center">
           <div class="card-icon rounded-circle d-flex align-items-center justify-content-center"> <i class="bi bi-people"></i></div>
           <div class="ps-3">
+            <app-spinner *ngIf="isLoading"></app-spinner>
             <h6>{{statistique.nbClient}}</h6>
           </div>
         </div>
@@ -31,6 +32,7 @@
         <div class="d-flex align-items-center">
           <div class="card-icon rounded-circle d-flex align-items-center justify-content-center"> <i class="bi bi-currency-dollar"></i></div>
           <div class="ps-3">
+            <app-spinner *ngIf="isLoading"></app-spinner>
             <h6>{{statistique.montatPaye | number:'1.3-3'}} TND </h6>
           </div>
         </div>
@@ -55,6 +57,7 @@
         <div class="d-flex align-items-center">
           <div style="background-color: red; color: white;" class="card-icon rounded-circle d-flex align-items-center justify-content-center"> <i class="bi bi-currency-dollar"></i></div>
           <div class="ps-3">
+            <app-spinner *ngIf="isLoading"></app-spinner>
             <h6>{{statistique.montantNonPaye | number:'1.3-3'}} TND </h6>
           </div>
         </div>
@@ -79,6 +82,7 @@
         <div class="d-flex align-items-center">
           <div class="card-icon rounded-circle d-flex align-items-center justify-content-center"> <i class="bi bi-cart"></i></div>
           <div class="ps-3">
+            <app-spinner *ngIf="isLoading"></app-spinner>
             <h6>{{statistique.nbFacturePaye}}</h6>
           </div>
         </div>
@@ -103,6 +107,7 @@
         <div class="d-flex align-items-center">
           <div style="background-color: red; color: white;" class="card-icon rounded-circle d-flex align-items-center justify-content-center"> <i class="bi bi-cart"></i></div>
           <div class="ps-3">
+            <app-spinner *ngIf="isLoading"></app-spinner>
             <h6>{{statistique.nbFactureNonPaye}}</h6>
           </div>
         </div>
