--- a/src/app/composants/header/header.component.html
+++ b/src/app/composants/header/header.component.html
@@ -7,21 +7,21 @@
     <ul class="d-flex align-items-center">
       <li class="nav-item d-block d-lg-none"> <a class="nav-link nav-icon search-bar-toggle " href="#"> <i class="bi bi-search"></i> </a></li>
       <li class="nav-item dropdown pe-3">
-        <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown"> <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle"> <span class="d-none d-md-block dropdown-toggle ps-2">Foulen</span> </a>
+        <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown"> <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle"> <span class="d-none d-md-block dropdown-toggle ps-2">{{userConnected.firstname}} {{userConnected.lastname}}</span> </a>
         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
           <li class="dropdown-header">
-            <h6>Foulen ben foulen</h6>
-            <span>Admin </span>
+            <h6>{{userConnected.firstname}} {{userConnected.lastname}}</h6>
+            <span>Admin</span>
           </li>
           <li>
             <hr class="dropdown-divider">
           </li>
           <li>
-            <a class="dropdown-item d-flex align-items-center" routerLink="/user-profile"> <i class="bi bi-person"></i> <span>My Profile</span> </a></li>
+            <a class="dropdown-item d-flex align-items-center" routerLink="/profil"> <i class="bi bi-person"></i> <span>Profil</span> </a></li>
           <li>
             <hr class="dropdown-divider">
           </li>
-          <li> <a class="dropdown-item d-flex align-items-center" routerLink="/user-profile"> <i class="bi bi-gear"></i> <span>Account Settings</span> </a></li>
+          <li> <a class="dropdown-item d-flex align-items-center" routerLink="/user-profile"> <i class="bi bi-gear"></i> <span>Paramètres</span> </a></li>
           <li>
             <hr class="dropdown-divider">
           </li>
