--- a/src/app/pages/facture/facture.component.html
+++ b/src/app/pages/facture/facture.component.html
@@ -69,7 +69,7 @@
       <button type="submit" class="btn btn-success mt-2" (click)="findWidthFiltre()">Rechercher</button>
     </form>
   </div>
-  <h2>Liste des factures</h2>
+  <h2 class="mt-3">Liste des factures</h2>
   <app-loader2 *ngIf="isLoading"></app-loader2>
   <table class="table text-center">
     <thead>
@@ -147,8 +147,8 @@
         Êtes-vous sûr de vouloir changer le statut de paiement en "payé" ?
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" (click)="updatePaymentStatus()" data-bs-dismiss="modal">Confirmer</button>
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Annuler</button>
+        <button type="button" class="btn btn-success" (click)="updatePaymentStatus()" data-bs-dismiss="modal">Confirmer</button>
       </div>
     </div>
   </div>
