--- a/src/app/pages/devis/devis.component.html
+++ b/src/app/pages/devis/devis.component.html
@@ -170,11 +170,11 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Êtes-vous sûr de vouloir supprimer cette devis ?
+        Êtes-vous sûr de vouloir supprimer cette facture ?
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
-        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Supprimer</button>
+        <button type="button" class="btn btn-danger" (click)="delete()" data-bs-dismiss="modal">Supprimer</button>
       </div>
     </div>
   </div>
