--- a/src/app/pages/statistique/statistique.component.html
+++ b/src/app/pages/statistique/statistique.component.html
@@ -28,12 +28,12 @@
         </ul>
       </div>
       <div class="card-body">
-        <h5 class="card-title">Revenu <span>| Ce mois-ci</span></h5>
+        <h5 class="card-title">Revenu Facture<span>| Ce mois-ci</span></h5>
         <div class="d-flex align-items-center">
           <div class="card-icon rounded-circle d-flex align-items-center justify-content-center"> <i class="bi bi-currency-dollar"></i></div>
           <div class="ps-3">
             <app-spinner *ngIf="isLoading"></app-spinner>
-            <h6>{{statistique.montatPaye | number:'1.3-3'}} TND </h6>
+            <h6>{{statistique.montantFacturePaye | number:'1.3-3'}} TND </h6>
           </div>
         </div>
       </div>
@@ -58,7 +58,7 @@
           <div style="background-color: red; color: white;" class="card-icon rounded-circle d-flex align-items-center justify-content-center"> <i class="bi bi-currency-dollar"></i></div>
           <div class="ps-3">
             <app-spinner *ngIf="isLoading"></app-spinner>
-            <h6>{{statistique.montantNonPaye | number:'1.3-3'}} TND </h6>
+            <h6>{{statistique.montantFactureNonPaye | number:'1.3-3'}} TND </h6>
           </div>
         </div>
       </div>
@@ -115,4 +115,106 @@
     </div>
   </div>
 </div>
+  <div class="row">
+    <div class="col-xxl-4 col-md-6">
+      <div class="card info-card revenue-card">
+        <div class="filter">
+          <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
+          <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+            <li class="dropdown-header text-start">
+              <h6>Filtre</h6>
+            </li>
+            <li><a class="dropdown-item" href="#">Aujourd'hui</a></li>
+            <li><a class="dropdown-item" href="#">Ce mois-ci</a></li>
+            <li><a class="dropdown-item" href="#">Cette année</a></li>
+          </ul>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Revenu Devis<span>| Ce mois-ci</span></h5>
+          <div class="d-flex align-items-center">
+            <div class="card-icon rounded-circle d-flex align-items-center justify-content-center"> <i class="bi bi-currency-dollar"></i></div>
+            <div class="ps-3">
+              <app-spinner *ngIf="isLoading"></app-spinner>
+              <h6>{{statistique.montantDevisPaye | number:'1.3-3'}} TND </h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-xxl-4 col-md-6">
+      <div class="card info-card revenue-card">
+        <div class="filter">
+          <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
+          <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+            <li class="dropdown-header text-start">
+              <h6>Filtre</h6>
+            </li>
+            <li><a class="dropdown-item" href="#">Aujourd'hui</a></li>
+            <li><a class="dropdown-item" href="#">Ce mois-ci</a></li>
+            <li><a class="dropdown-item" href="#">Cette année</a></li>
+          </ul>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Montant Devis Non Payé <span>| Ce mois-ci</span></h5>
+          <div class="d-flex align-items-center">
+            <div style="background-color: red; color: white;" class="card-icon rounded-circle d-flex align-items-center justify-content-center"> <i class="bi bi-currency-dollar"></i></div>
+            <div class="ps-3">
+              <app-spinner *ngIf="isLoading"></app-spinner>
+              <h6>{{statistique.montantDevisNonPaye | number:'1.3-3'}} TND </h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-xxl-4 col-md-6">
+      <div class="card info-card sales-card">
+        <div class="filter">
+          <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
+          <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+            <li class="dropdown-header text-start">
+              <h6>Filter</h6>
+            </li>
+            <li><a class="dropdown-item" href="#">Today</a></li>
+            <li><a class="dropdown-item" href="#">This Month</a></li>
+            <li><a class="dropdown-item" href="#">This Year</a></li>
+          </ul>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Nombre devis payé <span>| Today</span></h5>
+          <div class="d-flex align-items-center">
+            <div class="card-icon rounded-circle d-flex align-items-center justify-content-center"> <i class="bi bi-cart"></i></div>
+            <div class="ps-3">
+              <app-spinner *ngIf="isLoading"></app-spinner>
+              <h6>{{statistique.nbDevisPaye}}</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-xxl-4 col-md-6">
+      <div class="card info-card sales-card">
+        <div class="filter">
+          <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
+          <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+            <li class="dropdown-header text-start">
+              <h6>Filter</h6>
+            </li>
+            <li><a class="dropdown-item" href="#">Today</a></li>
+            <li><a class="dropdown-item" href="#">This Month</a></li>
+            <li><a class="dropdown-item" href="#">This Year</a></li>
+          </ul>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Nombre devis non payé <span>| Today</span></h5>
+          <div class="d-flex align-items-center">
+            <div style="background-color: red; color: white;" class="card-icon rounded-circle d-flex align-items-center justify-content-center"> <i class="bi bi-cart"></i></div>
+            <div class="ps-3">
+              <app-spinner *ngIf="isLoading"></app-spinner>
+              <h6>{{statistique.nbDevisNonPaye}}</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
