--- a/src/app/pages/facture/facture.component.html
+++ b/src/app/pages/facture/facture.component.html
@@ -94,19 +94,19 @@
       <td *ngIf="!f.paymentStatus"><span class="badge bg-danger">Non payé</span></td>
       <td>
 
+        <!--button details -->
         <button class="btn btn-primary" [routerLink]="['/detailsfacture', f.id]"><i class="bi bi-eye"></i></button>
 
-        <button *ngIf="!f.paymentStatus" type="button" class="btn btn-primary ms-1" (click)="setId(f.id)" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-          Payer
-        </button>
+        <!--button payer -->
+        <button *ngIf="!f.paymentStatus" type="button" class="btn btn-primary ms-1 bi bi-cash" (click)="setId(f.id)" data-bs-toggle="modal" data-bs-target="#staticBackdrop"></button>
 
-        <button *ngIf="f.paymentStatus" type="button" class="btn btn-primary ms-1" disabled>
-          Payer
-        </button>
+        <button *ngIf="f.paymentStatus" type="button" class="btn btn-primary ms-1 bi bi-cash" disabled></button>
 
-        <button type="button" class="btn btn-danger ms-1" (click)="setId(f.id)" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal">
-          Supprimer
-        </button>
+        <!--button supprimer -->
+        <button type="button" class="btn btn-danger ms-1 bi bi-trash" (click)="setId(f.id)" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal"></button>
+
+        <!--button modifier -->
+        <button type="button" class="btn btn-warning ms-1 bi bi-pencil-square" [routerLink]="['/modifierFacture', f.id]" ></button>
 
       </td>
     </tr>
