--- a/src/app/pages/facture/modifierFacture/modifier-facture/modifier-facture.component.html
+++ b/src/app/pages/facture/modifierFacture/modifier-facture/modifier-facture.component.html
@@ -142,7 +142,52 @@
   <button type="button" class="btn btn-success" routerLink="/facture"> <i class="bi bi-arrow-left-circle-fill"></i> Retour</button>
   <div class="container">
     <div class="row">
-      <div class="card text-bg-primary mb-3" style="max-width: 18rem;">
+      <div class="card container mt-2 mb-2 pb-2">
+        <h2>Ajouter un Produit</h2>
+        <form class="row g-3">
+          <div calss="col">
+            <div>
+              <div class="col-md-12">
+                <div class="col-md-5">
+                  <div class="input-group">
+                    <input class="form-control" list="datalistOptions" id="exampleDataList1" name="codeP" (change)="afficher()" [(ngModel)]="codeP" placeholder="Recherche par code">
+                    <datalist id="datalistOptions1">
+                      <option *ngFor="let p of listProduit" [value]="p.code">{{p.code}}</option>
+                    </datalist>
+                  </div>
+                </div>
+                <div class="text-danger col-md-12 mt-1" *ngIf="searchErreur">
+                  Le produit n'a pas été trouvé.
+                </div>
+              </div>
+            </div>
+            <div class="row mt-2">
+              <div class="col-md-4  mt-1">
+                <input type="number" placeholder="Prix" [(ngModel)]="prixP" class="form-control" id="prixP1" name="prixP" step="0.01" required>
+                <span class="text-danger col-md-12" *ngIf="prixErreur">
+                  Le prix saisi n'est pas valide.
+                </span>
+              </div>
+              <div class="col-md-3  mt-1">
+                <input type="number" placeholder="Quantité" [(ngModel)]="qunatiteP" class="form-control" id="qunatiteP1" name="qunatiteP" required>
+                <span class="text-danger col-md-12" *ngIf="quantiteErreur">
+                  Quantité saisi n'est pas valide.
+                </span>
+              </div>
+              <div class="col-md-3  mt-1">
+                <input type="number" placeholder="Remise" [(ngModel)]="remiseP" class="form-control" id="remiseP1" name="remiseP" step="0.01">
+                <span class="text-danger col-md-12" *ngIf="remiseErreur">
+                  Remise saisi n'est pas valide.
+                </span>
+              </div>
+              <div class="mt-1">
+                <button type="submit" (click)="ajouter()" class="btn btn-primary">
+                  <i class="bi bi-plus"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </form>
       </div>
       <div class="card">
         <h5 class="card-title">Facture</h5>
@@ -187,6 +232,11 @@
             <div class="col-6">
               <p> <b>Total HT :</b><br> {{f.prixTotal | number:'1.3-3' }} TND</p>
             </div>
+            <div class="col-6">
+
+            <button class="btn btn-danger bi bi-trash-fill" (click)="setId(f.id)" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal"></button>
+            </div>
+
           </div>
         </div>
       </div>
